// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages EditProcess.vue it can create a new process renders 1`] = `
<div>
  <elrow-stub tag="div" justify="start" align="top">
    <elcol-stub span="24" tag="div">
      <processinfoform-stub process="[object Object]" isnewprocess="true"></processinfoform-stub>
    </elcol-stub>
  </elrow-stub>
  <elrow-stub tag="div" gutter="20" justify="start" align="top">
    <elcol-stub span="24" tag="div">
      <div id="modeler"></div>
    </elcol-stub>
  </elrow-stub>
</div>
`;

exports[`Pages EditProcess.vue renders 1`] = `
<div>
  <elrow-stub tag="div" justify="start" align="top">
    <elcol-stub span="24" tag="div">
      <processinfoform-stub process="[object Object]"></processinfoform-stub>
    </elcol-stub>
  </elrow-stub>
  <elrow-stub tag="div" gutter="20" justify="start" align="top">
    <elcol-stub span="24" tag="div">
      <div id="modeler"></div>
    </elcol-stub>
  </elrow-stub>
</div>
`;
